add honey chicken recipe page and link from index

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/waffles.html">Waffles</a>
+    <a href="./recipes/honey-chicken.html">Honey Chicken</a>
 </body>
 </html>
