--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/waffles.html">Waffles</a>
-    <a href="./recipes/honey-chicken.html">Honey Chicken</a>
+    <ul>
+        <li><a href="./recipes/waffles.html">Waffles</a></li>
+        <li><a href="./recipes/honey-chicken.html">Honey Chicken</a></li>
+        <li><a href="./recipes/mojito.html">Mojito</a></li>
+    </ul>
+    
+    
 </body>
 </html>
