add back to homepage link on recipe pages

--- a/recipes/honey-chicken.html
+++ b/recipes/honey-chicken.html
@@ -31,5 +31,6 @@
         <li>Remove chicken from marinade, discarding of any remaining marinade, and place in a lightly greased 9x13 inch baking dish.</li>
         <li>Bake at 350 degrees F (175 degrees C) for about 20 to 25 minutes, or until chicken is cooked through and juices run clear.</li>
     </ol>
+    <p><a href="../index.html">Back to homepage</a></p>
 </body>
 </html>
