--- a/recipes/mojito.html
+++ b/recipes/mojito.html
@@ -26,5 +26,6 @@
         <li>Fill the glass almost to the top with ice. Pour in rum and fill the glass with club soda.</li>
         <li>Stir, taste, and add more sugar if desired.</li>
     </ol>
+    <p><a href="../index.html">Back to homepage</a></p>
 </body>
 </html>
