--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -26,5 +26,6 @@
         <li>In a separate bowl, beat the eggs. Stir in the milk, butter and vanilla. Pour the milk mixture into the flour mixture; beat until blended.</li>
         <li>Ladle the batter into a preheated waffle iron. Cook the waffles until golden and crisp. Serve immediately.</li>
     </ol>
+    <p><a href="../index.html">Back to homepage</a></p>
 </body>
 </html>
