Add style.css, change honey chicken image

--- a/recipes/honey-chicken.html
+++ b/recipes/honey-chicken.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
 
     <title>Honey Chicken</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="honey-chicken">
     <h1>Honey Chicken</h1>
-    <img src="../images/honey-chicken.jpeg" alt="honey chicken">
+    <img src="../images/honey-chicken.jpg" alt="honey chicken">
 
     <h2>Description</h2>
     <p>Chicken breasts bathed in a tangy, citrus honey marinade, then baked. This is a great marinade for chicken breasts. For a more low-fat recipe, try reducing the amount of oil. As far as I can tell, it's just used to 'glue' the marinade to the chicken.
