--- a/recipes/mojito.html
+++ b/recipes/mojito.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Mojito</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="mojito">
     <h1>Mojito</h1>
     <img src="../images/mojito.jpeg" alt="mojito">
 
