--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Waffles</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="waffles">
     <h1>Waffles</h1>
     <img src="../images/waffles.jpeg" alt="waffles">
     <h2>Description</h2>
